# ArchiDEAL

./: .env.example  .gitignore  Makefile  README.md  compose.yaml  sources.lock.json
components/DEALData/: .bandit  .codacy.yml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prospector.yml  .pylintrc  .yamllint.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  sonar-project.properties
components/DEALData/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release-drafter.yml
components/DEALData/.github/DISCUSSION_TEMPLATE/: contributor-help.yml  ideas.yml  q-and-a.yml  show-and-tell.yml
components/DEALData/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_integration.yml  documentation.yml  feature_request.yml  user_feedback.yml
components/DEALData/.github/workflows/: bandit.yml  codacy.yml  codeql.yml  ossar.yml  osv-scanner.yml  release-drafter.yml  renovate.yml  sonarqube.yml  tests.yml
components/DEALData/core_layer/: Dockerfile  entrypoint.sh  manage.py  requirements.txt
components/DEALData/core_layer/auth/: helpers.py  models.py  redirects.py  tests.py  tokens.py  urls.py  views.py
components/DEALData/core_layer/core/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
components/DEALData/core_layer/core_data/: models.py  serializers.py  test_experiment_api.py  tests.py  views.py
components/DEALData/dealdata_common/: __init__.py  authentication.py  consumer_observability.py  deployment.py  django_settings.py  ingestion.py  kafka.py  kafka_preflight.py  metrics_proxy.py  models.py  observability.py  pylint_settings.py  pylint_urls.py  serializers.py  views.py
components/DEALData/docs/: README.md  api-contracts.md  refactor-roadmap.md
components/DEALData/gps_layer/: Dockerfile  requirements.txt  test_consumer_observability.py  test_kafka_preflight.py  test_metrics_proxy.py  test_oidc_authentication.py  test_production_compose_security.py
components/DEALData/scripts/: validate.ps1
components/DEALData/sensor_layer/: Dockerfile  requirements.txt
components/DEALIoT/mqtt-kafka-bridge/: Cargo.toml  Dockerfile
(+404 files in other folders)
