[package]
name = "dealiot-mqtt-kafka-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version = "1.89"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dealiot-event-contracts = { path = "../dealiot-event-contracts" }
env_logger = "0.11"
log = "0.4"
rdkafka = { version = "0.39", default-features = false, features = ["cmake-build", "libz-static", "ssl", "tokio"] }
ring = "0.17"
rumqttc = { package = "rumqttc-v4-next", version = "0.33.2", default-features = false, features = ["use-rustls-ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiny_http = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
